# python-project

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/allocation/: dependencies.py  main.py  routers.py  version.py
src/allocation/adapters/: database.py  orm.py  repository.py
src/allocation/app/: asgi.py  router.py
src/allocation/app/config/: settings.py
src/allocation/app/utils/: aiohttp_client.py
src/allocation/domain/: models.py  schemas.py
src/allocation/entrypoints/: allocation.py  base.py  batch.py  routers.py
src/allocation/repository/: repository.py
src/allocation/service_layer/: __init__.py  allocation_service.py  dependencies.py  unit_of_work.py
src/allocation/settings/: config.py
src/hello/: main.py
tests/: __init__.py  conftest.py  mocks.py
tests/e2e/: __init__.py  test_api.py
tests/integration/: __init__.py  test_orm.py  test_repostiroy.py  test_uow.py
tests/unit/: __init__.py  test_allocation_service.py  test_allocations.py  test_hello.py  test_orm.py  test_repostiroy.py
